monkey-c-formatter/tests/snapshots/snapshots__format_inputs@hex_literal_forms.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/hex_literal_forms.mc
---
function f() {
    var lowerPrefix = 0xff;
    var upperPrefix = 0XFF;
    var upperLongSuffix = 0xFFL;
    var mixedDigits = 0xAbCdEf;
}
