monkey-c-formatter/tests/snapshots/snapshots__format_inputs@hex_long_literal.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/hex_long_literal.mc
---
function f() {
    var a = 0x800l;
    var b = 0xCAFEl + 1l;
    var c = 1 * 0xFFFFl;
    var d = 0xFF;
}
