monkey-c-formatter/tests/snapshots/snapshots__format_inputs@if_else_with_trailing_comments.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/if_else_with_trailing_comments.mc
---
function f() {
    if (a) {
        return 1;
    } // first
    else if (b) {
        return 2;
    } // second
    else {
        return 3;
    }
}
