monkey-c-formatter/tests/snapshots/snapshots__format_inputs@if_trailing_comment_no_else.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/if_trailing_comment_no_else.mc
---
function f() {
    if (a) {
        return 1;
    } // tail
}
