monkey-c-formatter/tests/snapshots/snapshots__format_inputs@inline_after_open_brace.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/inline_after_open_brace.mc
---
function fn() {
    if (foo = false) { // same line as `{`
        foo = true;
    }

    while (x) { /* block comment */
        do_thing();
    }

    if (cond) {
        // own line above first child
        body();
    }
}
