monkey-c-formatter/tests/snapshots/snapshots__format_inputs@integer_literal_forms.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/integer_literal_forms.mc
---
function f() {
    var zero = 0;
    var plain = 42;
    var leadingZeros = 007;
    var octalLike = 010;
    var maxInt = 2147483647;
    var overflowInt = 4000000000;
}
