monkey-c-formatter/tests/snapshots/snapshots__format_inputs@line_comment_preserved.mc.snap
---
source: tests/snapshots.rs
input_file: tests/snapshot_inputs/line_comment_preserved.mc
---
// a comment
var x = 1;
