monkey-c-formatter/tests/snapshots/snapshots__format_inputs@magic_comma_calls.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/magic_comma_calls.mc
---
function foo(
    a as String,
    b as String,
) as Void {}

function bar() {
    calling(
        foo,
        bar,
        baz,
    );
    short(a, b);
    var x = new Foo(
        a,
        b,
        c,
    );
    var y = new Foo(a, b);
}

function inline(p as Number) as Number {
    return p + 1;
}
