monkey-c-formatter/tests/snapshots/snapshots__format_inputs@method_type.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/method_type.mc
---
import Toybox.Lang;

function doWork(x as Method(a as Number) as String) as String {
    return x.invoke(2);
}

function noReturn(cb as Method(s as String)) {}

function multi(cb as Method(x as Number, y as Number) as Boolean) {}

typedef Cb as Method(x as Number, y as Number) as Boolean;

typedef Optional as Method(s as String)?;

function unionReturn(cb as Method(x as Number) as Number or Null) {}

class C {
    function attach(handler as Method(event as Object) as Void) {}
}
