monkey-c-formatter/tests/snapshots/snapshots__format_inputs@multi_annotation.mc.snap
---
source: monkey-c-formatter/tests/snapshots.rs
input_file: monkey-c-formatter/tests/snapshot_inputs/multi_annotation.mc
---
(:debug, :background)
function logMessage(prefix as String, message as String) as Void {
    Sys.println(prefix + " : " + message);
}
